raffia/tests/recoverable/scss/variables.scss.error.snap
---
source: raffia/tests/recoverable.rs
---
error: Sass flag `!global` is disallowed
  ┌─ variables.scss:1:1
  │
1 │ namespace.$member: value !global;
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: duplicated Sass flag `!default`
  ┌─ variables.scss:3:19
  │
3 │ $c: 30px !default !default !default !global !global !global;
  │                   ^^^^^^^^

error: duplicated Sass flag `!default`
  ┌─ variables.scss:3:28
  │
3 │ $c: 30px !default !default !default !global !global !global;
  │                            ^^^^^^^^

error: duplicated Sass flag `!global`
  ┌─ variables.scss:3:45
  │
3 │ $c: 30px !default !default !default !global !global !global;
  │                                             ^^^^^^^

error: duplicated Sass flag `!global`
  ┌─ variables.scss:3:53
  │
3 │ $c: 30px !default !default !default !global !global !global;
  │                                                     ^^^^^^^

error: duplicated Sass flag `!global`
  ┌─ variables.scss:4:18
  │
4 │ $d: 40px !global !global !global !default !default !default;
  │                  ^^^^^^^

error: duplicated Sass flag `!global`
  ┌─ variables.scss:4:26
  │
4 │ $d: 40px !global !global !global !default !default !default;
  │                          ^^^^^^^

error: duplicated Sass flag `!default`
  ┌─ variables.scss:4:43
  │
4 │ $d: 40px !global !global !global !default !default !default;
  │                                           ^^^^^^^^

error: duplicated Sass flag `!default`
  ┌─ variables.scss:4:52
  │
4 │ $d: 40px !global !global !global !default !default !default;
  │                                                    ^^^^^^^^

error: duplicated Sass flag `!global`
  ┌─ variables.scss:5:27
  │
5 │ $e: 50px !global !default !global !default !global !default;
  │                           ^^^^^^^

error: duplicated Sass flag `!default`
  ┌─ variables.scss:5:35
  │
5 │ $e: 50px !global !default !global !default !global !default;
  │                                   ^^^^^^^^

error: duplicated Sass flag `!global`
  ┌─ variables.scss:5:44
  │
5 │ $e: 50px !global !default !global !default !global !default;
  │                                            ^^^^^^^

error: duplicated Sass flag `!default`
  ┌─ variables.scss:5:52
  │
5 │ $e: 50px !global !default !global !default !global !default;
  │                                                    ^^^^^^^^


